# signalforge

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt  storage.sqlite3-shm  storage.sqlite3-wal  streamlit_app.py
.github/workflows/: ci.yml
.interface-design/: system.md
.streamlit/: config.toml
demo/: loom_script.md  sample_run.md
docs/: index.html  sample-accounts.csv
evals/: bench_models.py  golden.jsonl  run_benchmark.py  run_regression.py
examples/: icp.example.yaml
signalforge/: __init__.py  cli.py  config.py  cost.py  ledger.py  models.py
signalforge/drafts/: __init__.py  drafter.py  evals.py  follow_up.py
signalforge/enrichment/: __init__.py  apollo.py  company_context.py  company_context_cache.py
signalforge/orchestrator/: __init__.py  pipeline.py  replay.py
signalforge/research/: __init__.py  brief_agent.py
signalforge/resources/: live_boards.json  sec_tickers.txt  yc_boards.json
signalforge/scoring/: __init__.py  icp_scorer.py
signalforge/signals/: __init__.py  ashby.py  base.py  company_registry.py  exa.py  github_activity.py  greenhouse.py  hackernews.py  lever.py  news_rss.py  product_hunt.py  sec_edgar.py
signalforge/sinks/: __init__.py  csv_sink.py  html_report.py  hubspot_sink.py  slack_sink.py  sqlite_sink.py
tests/: e2e_demo.py  test_apollo.py  test_company_registry.py  test_cost.py  test_eval_harness.py  test_follow_up_reply.py  test_ledger.py  test_news_rss.py  test_scoring.py  test_sec_edgar.py  test_sinks.py
tools/: candidates.py  probe_boards.py  scrape_yc.py
